# quant-platform-windows

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  ai_search_quant.py  clients.py  dashboard.py  data_engine.py  data_router.py  deploy-railway.bat  deploy.bat  docker-compose.yml  dual_cloud_quant_v4.py  gcp_automl_launcher.py  gcp_burn_money.py  gcp_deploy_endpoint.py  gcp_fine_tune.py  gcp_init.py  gcp_injector.py  gcp_lab_ignite.py  gcp_scheduler_daemon.py  gcp_scoring.py  main.py  pyproject.toml  quant_master.py  radar.py  railway.toml  regression_test.py  render.yaml  requirements.txt  requirements_gcp.txt  sentiment_beast.py  setup-repo.bat  一键部署说明.md
.github/workflows/: ci-cd.yml  ci.yml  deploy-railway.yml
camber_expert/: batch_ask_expert.py
cloud_scraper/: Dockerfile  main.py  scrapinghub.yml  scrapy.cfg  settings.py  setup.py
cloud_scraper/spiders/: stock_spider.py
scripts/: Launch_Dashboard.bat  login-github.bat  push-to-github.bat  start_singularity.vbs
src/: a_share_quant.py  ai_search_quant.py  dashboard.py  data_engine.py  data_router.py  dual_cloud_quant_v4.py  gcp_burn_money.py  gcp_daily_pipeline.py  gcp_feature_engineer.py  gcp_fine_tune.py  gcp_init.py  gcp_injector.py  gcp_lab_ignite.py  gcp_scheduler_setup.py  main.py  quant_master.py
src/chats/: 158f29cc-8272-496d-aa8a-9f495f5fe2e4.jsonl  2b7bbfa1-4bdd-440a-8d4c-aa9b7f194143.jsonl  2d8dfc60-31b0-44dc-b004-5556cfe0ec60.jsonl  81103797-333c-443f-ad58-d3115dfd43d6.jsonl  9fe7bedf-1386-4dfc-a067-366f8a8d6dda.jsonl  b5d0b0ed-bad7-4142-b3d3-058c58885cd9.jsonl  (+3 more)
